fix(dev): when button wraps select

--- a/ui/dev/src/css/app.sass
+++ b/ui/dev/src/css/app.sass
@@ -166,13 +166,16 @@ kbd
   &:active,
   &:focus
     background: var(--background-color-hover)
+    color: var(--text-color-hover)
 
 .button > .select
-  background: transparent
+  background: inherit
+  color: inherit
   border: transparent
   margin: 2px
   padding: 0 4px
   font-size: 1.2em
+  transition: none
 
 .list
   display: flex
